[FIX] z-index sidebar

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -65,7 +65,7 @@
             margin-left: -100%;
             background-color: $main-dark;
             overflow-y: scroll;
-            z-index: 2;
+            z-index: 1000;
             &::-webkit-scrollbar {
                 display: none;
             }
